feat(home/emacs): tell howm to follow theme

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2283,6 +2283,9 @@ Configuration:
                                   (require 'howm-org)
                                   (require 'howm)))
 
+  ;; Variables that must be set before load.
+  (setq howm-follow-theme t)
+
   (after! howm
     (setopt howm-directory (expand-file-name "howm" my/brain2)
             howm-keyword-file (expand-file-name ".howm-keys" howm-directory)
