fix(home/emacs): make howm insert date with weekday

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2301,6 +2301,7 @@ Configuration:
             howm-history-file (expand-file-name ".howm-history" howm-directory)
             ;; Match with Denote
             howm-file-name-format "%Y%m%dT%H%M%S.org"
+            howm-date-format "%Y-%m-%d %a"
 
             howm-view-use-grep t
             howm-view-grep-command "rg"
