feat(home/emacs): go back to native howm timestamps
This ends up roping in Org Mode's clock timestamps, would rather not keep
monkey-patching things on to deal with this ¯\_(ツ)_/¯.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2284,16 +2284,7 @@ Configuration:
                                   (require 'howm)))
 
   ;; Variables that must be set before load.
-  (setq howm-follow-theme t
-        ;; Allow including weekday in task timestamps (matches Org Mode better).
-        howm-date-regexp (rx (group (any "1-2") (= 3 digit))
-                             "-"
-                             (group (any "0-1") digit)
-                             "-"
-                             (group (any "0-3") digit)
-                             (? " " (or "Sun" "Mon" "Tue" "Wed"
-                                        "Thu" "Fri" "Sat")))
-        howm-date-regexp-grep "[1-2][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9](?: [A-Z][a-z]{2})?")
+  (setq howm-follow-theme t)
 
   (after! howm
     (setopt howm-directory (expand-file-name "howm" my/brain2)
@@ -2301,7 +2292,6 @@ Configuration:
             howm-history-file (expand-file-name ".howm-history" howm-directory)
             ;; Match with Denote
             howm-file-name-format "%Y%m%dT%H%M%S.org"
-            howm-date-format "%Y-%m-%d %a"
 
             howm-view-use-grep t
             howm-view-grep-command "rg"
