feat(home/emacs): make howm list view split horizontally

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2292,6 +2292,7 @@ Configuration:
             howm-history-file (expand-file-name ".howm-history" howm-directory)
             ;; Match with Denote
             howm-file-name-format "%Y%m%dT%H%M%S.org"
+            howm-view-split-horizontally t
 
             howm-view-use-grep t
             howm-view-grep-command "rg"
