--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3653,6 +3653,26 @@ Configuration:
             elfeed-tube-auto-save-p t))
 #+end_src
 
+** YeeTube
+Command to kill the URL for the current video. Based on [[help:yeetube-play][yeetube-play]] 🙃.
+#+begin_src elisp
+  (after! yeetube
+    (defun my/yeetube-kill-url ()
+      "Kill URL for video at point in *yeetube* buffer."
+      (interactive)
+      (save-excursion
+        ;; When point is on thumbnail, id will be nil.
+        (and (null (tabulated-list-get-id)) (end-of-line))
+        (let* ((id (tabulated-list-get-id))
+               (entry-content (cadr (assoc id yeetube-content)))
+               (video-url (yeetube-get-url id))
+               (video-title (aref entry-content (if yeetube-display-thumbnails-p 1 0))))
+          (kill-new video-url)
+          (message "Killed URL for: %s" video-title))))
+
+    (bind-key "y" #'my/yeetube-kill-url yeetube-mode-map))
+#+end_src
+
 * Miscellaneous
 ** ¯\_(ツ)_/¯
 This is very important.
