feat(home/emacs): show content on org startup
Makes it easier to use howm 🙃.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2327,7 +2327,7 @@ Ah, the crown jewel of Emacs 👑.
             org-ctrl-k-protect-subtree             'error
             org-startup-indented                   t
             org-indent-indentation-per-level       0
-            org-startup-folded                     'content
+            org-startup-folded                     'nofold
             org-ellipsis                           " ▼"
             org-pretty-entities                    t
             org-log-done                           'note
