--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -577,10 +577,10 @@ Reduce fringe size on the right (left is used for various indicators).
 ** Fonts
 #+begin_src elisp
   (custom-set-faces
-   '(default           ((t (:font "Maple Mono NF" :height 120))))
-   '(fixed-pitch       ((t (:font "Maple Mono NF" :height 120))))
-   '(fixed-pitch-serif ((t (:font "Maple Mono NF" :height 140))))
-   '(variable-pitch    ((t (:font "Atkinson Hyperlegible Next" :height 140)))))
+   '(default           ((t (:font "PragmataPro" :height 140))))
+   '(fixed-pitch       ((t (:font "PragmataPro"))))
+   '(fixed-pitch-serif ((t (:font "PragmataPro"))))
+   '(variable-pitch    ((t (:font "Atkinson Hyperlegible Next")))))
 #+end_src
 
 #+begin_src elisp
