--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2321,6 +2321,16 @@ Configuration:
             ediff-split-window-function #'split-window-horizontally))
 #+end_src
 
+** Uniline
+Draw plain-text diagrams with Unicode! The package doesn't come with autoloads, so we have to define our own 🔧. I usually like to include full docstrings in my autoloads, but this one is just absurdly long 😅.
+
+Bind the mode to =C-<insert>=, as suggested by the documentation; the default bind there is [[help:kill-ring-save][kill-ring-save]], which already has =M-w= 👍.
+
+#+begin_src elisp
+  (autoload #'uniline-mode "uniline-transient" "" t)
+  (bind-key "C-<insert>" #'uniline-mode)
+#+end_src
+
 * Denote
 #+begin_src elisp
   (bind-keys ("C-c X" . org-capture)
