fix(home/emacs): remove denote journal from custom agenda
Haven't seriously used this for ages, but now they've removed the private
function, so just get rid of it to keep this working.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2800,10 +2800,7 @@ Habits.
      org-super-agenda-unmatched-name "Other"
      org-agenda-custom-commands
      '(("c" "Custom super view"
-        ((agenda "" ((org-agenda-files
-                       (append org-agenda-files
-                               (denote-journal--entry-today)))
-                     (org-agenda-span 'day)
+        ((agenda "" ((org-agenda-span 'day)
                      (org-agenda-start-day nil)
                      (org-super-agenda-groups
                       '((:habit t
