fix(home/emacs): howm sorting order with ripgrep

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2584,13 +2584,14 @@ Bind the mode to =C-<insert>=, as suggested by the documentation; the default bi
     (setopt howm-directory (expand-file-name "howm" my/brain2)
             howm-keyword-file (expand-file-name ".howm-keys" howm-directory)
             howm-history-file (expand-file-name ".howm-history" howm-directory)
-            howm-file-name-format "%Y%m%dT%H%M%S.org" ; Match with Denote
+            ;; Match with Denote
+            howm-file-name-format "%Y%m%dT%H%M%S.org"
             howm-view-split-horizontally t
             howm-menu-todo-num 20
 
             howm-view-use-grep t
             howm-view-grep-command "rg"
-            howm-view-grep-option "-nH --no-heading --color never"
+            howm-view-grep-option "-nH --no-heading --color=never -j=1"
             howm-view-grep-extended-option nil
             howm-view-grep-fixed-option "-F"
             howm-view-grep-expr-option nil
