feat(home/emacs): meow-block -> meow-tree-sitter-node

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1114,7 +1114,7 @@ There's no built-in function to delete the current file, so here's mine.
    '("M" . meow-undo-in-selection)
    '("n" . meow-left)
    '("N" . meow-left-expand)
-   '("o" . meow-block)
+   '("o" . meow-tree-sitter-node)
    '("O" . meow-to-block)
    '("p" . meow-replace)
    '("P" . meow-yank-pop)
