feat(home/emacs): update gptel local model list

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1957,7 +1957,16 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                                     :protocol "http"
                                     :host "windstorm:11434"
                                     :stream t
-                                    :models '(qwen3:14b))
+                                    :models '((qwen3-vl:8b
+                                               :capabilities (media)
+                                               :mime-types ("image/png"))
+                                              (qwen3-vl:8b-instruct
+                                               :capabilities (media)
+                                               :mime-types ("image/png"))
+                                              qwen3:14b
+                                              qwen3:30b
+                                              qwen3:30b-instruct
+                                              qwen3-coder:30b))
             gptel-default-mode    #'org-mode
             gptel-track-media     t
             gptel-expert-commands t)
