feat(home/emacs): add copilot models to gptel

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1896,6 +1896,7 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                 o1
                 o1-mini
                 o3-mini))
+    (gptel-make-gh-copilot "GitHub Copilot")
     (gptel-make-openai "OpenRouter"
       :host "openrouter.ai"
       :endpoint "/api/v1/chat/completions"
