feat(home/emacs): update github models models

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1891,11 +1891,11 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
       :stream t
       :key (##or (secrets-get-secret "KeePassXC" "GitHub AI")
                  (user-error "Unable to retrieve GitHub AI key"))
-      :models '(gpt-4o
-                gpt-4o-mini
-                o1
-                o1-mini
-                o3-mini))
+      :models '(gpt-5-mini
+                gpt-5
+                o3-mini
+                o4-mini
+                DeepSeek-R1-0528))
     (gptel-make-gh-copilot "GitHub Copilot")
     (gptel-make-openai "OpenRouter"
       :host "openrouter.ai"
