--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3127,6 +3127,12 @@ The bleeding-edge development branch of Org that I'm using has a small bug in th
   This function is called by `org-babel-execute-src-block'.")
 #+end_src
 
+*** Svgbob
+#+begin_src elisp
+  (autoload 'org-babel-execute:svgbob "ob-svgbob" "Execute a BODY of Svgbob code with PARAMS via org-babel.
+  This function is called by `org-babel-execute-src-block'.")
+#+end_src
+
 ** Fix List Bullets
 This formats the bullets in lists with a separate face, which is useful to both style it differently and also fix indentation with variable pitch faces. This snippet is adapted from [[https://github.com/doomemacs/themes/blob/master/extensions/doom-themes-ext-org.el][doomemacs/themes]]. We use two different regular expressions so that we can match lists with =*= as a bullet without matching headlines as well.
 #+begin_src elisp
